# app-postfix-srsd

./: .gitignore  ChangeLog  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  cpanfile  cpanfile.snapshot  dist.ini
contrib/freebsd/: postfix_srsd.rc
lib/App/Postfix/: Daemon.pm  SRSD.pm
lib/App/Postfix/Daemon/: Prefork.pm  Socket.pm
lib/App/Postfix/Daemon/Role/: Workers.pm
m4/: ax_require_header.m4  ax_require_lib.m4  piddir.m4
src/: Makefile.am  bsd.h  daemon.c  flopen.c  getprogname.c  main.cpp  netstring.cpp  netstring.hpp  pid_file.cpp  pid_file.hpp  slogstream.cpp  slogstream.hpp  socket_server.cpp  socket_server.hpp  srsd_server.cpp  srsd_server.hpp
src/srsd/: system_error.hpp
tools/: stress.pl  timeout.pl
